// Vitest Snapshot v1

exports[`Mongo > Props > All the props 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app": "my-app",
        "environment": "test",
        "instance": "test",
        "region": "local",
        "release": "v1",
        "role": "mongo",
      },
      "name": "test-mongo-test-c844268f",
      "namespace": "test",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 27017,
          "protocol": "TCP",
        },
      ],
      "selector": {
        "app": "my-app",
        "instance": "test",
        "role": "mongo",
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "app": "my-app",
        "environment": "test",
        "instance": "test",
        "region": "local",
        "release": "v1",
        "role": "mongo",
      },
      "name": "test-mongo-test-mongo-test-sts-c8cbd639",
      "namespace": "test",
    },
    "spec": {
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "app": "my-app",
          "instance": "test",
          "role": "mongo",
        },
      },
      "serviceName": "test-mongo-test-c844268f",
      "template": {
        "metadata": {
          "labels": {
            "app": "my-app",
            "environment": "test",
            "instance": "test",
            "region": "local",
            "release": "v1",
            "role": "mongo",
          },
        },
        "spec": {
          "containers": [
            {
              "args": [
                "--storageEngine",
                "wiredTiger",
              ],
              "image": "mongo:v1",
              "livenessProbe": {
                "failureThreshold": 5,
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 27017,
                },
                "timeoutSeconds": 5,
              },
              "name": "mongo",
              "ports": [
                {
                  "containerPort": 27017,
                },
              ],
              "readinessProbe": {
                "exec": {
                  "command": [
                    "mongo",
                    "--eval",
                    "db.adminCommand('ping')",
                  ],
                },
                "failureThreshold": 5,
                "initialDelaySeconds": 5,
                "timeoutSeconds": 5,
              },
              "resources": {
                "limits": {
                  "cpu": "100m",
                  "memory": "500Mi",
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/data/db",
                  "name": "mongo-data",
                },
              ],
            },
          ],
        },
      },
      "volumeClaimTemplates": [
        {
          "metadata": {
            "name": "mongo-data",
          },
          "spec": {
            "accessModes": [
              "ReadWriteOnce",
            ],
            "resources": {
              "requests": {
                "storage": "20Gi",
              },
            },
            "storageClassName": "general-purpose-delete",
          },
        },
      ],
    },
  },
]
`;

exports[`Mongo > Props > Minimal required props 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "instance": "mongo-test",
        "release": "v1",
        "role": "mongo",
      },
      "name": "test-mongo-test-c844268f",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 27017,
          "protocol": "TCP",
        },
      ],
      "selector": {
        "instance": "mongo-test",
        "role": "mongo",
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "instance": "mongo-test",
        "release": "v1",
        "role": "mongo",
      },
      "name": "test-mongo-test-mongo-test-sts-c8cbd639",
    },
    "spec": {
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "instance": "mongo-test",
          "role": "mongo",
        },
      },
      "serviceName": "test-mongo-test-c844268f",
      "template": {
        "metadata": {
          "labels": {
            "instance": "mongo-test",
            "release": "v1",
            "role": "mongo",
          },
        },
        "spec": {
          "containers": [
            {
              "args": [
                "--storageEngine",
                "mmapv1",
                "--smallfiles",
              ],
              "image": "mongo:v1",
              "livenessProbe": {
                "failureThreshold": 5,
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 27017,
                },
                "timeoutSeconds": 5,
              },
              "name": "mongo",
              "ports": [
                {
                  "containerPort": 27017,
                },
              ],
              "readinessProbe": {
                "exec": {
                  "command": [
                    "mongo",
                    "--eval",
                    "db.adminCommand('ping')",
                  ],
                },
                "failureThreshold": 5,
                "initialDelaySeconds": 5,
                "timeoutSeconds": 5,
              },
              "resources": {
                "limits": {
                  "cpu": "100m",
                  "memory": "500Mi",
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/data/db",
                  "name": "mongo-data",
                },
              ],
            },
          ],
        },
      },
      "volumeClaimTemplates": [
        {
          "metadata": {
            "name": "mongo-data",
          },
          "spec": {
            "accessModes": [
              "ReadWriteOnce",
            ],
            "resources": {
              "requests": {
                "storage": "20Gi",
              },
            },
            "storageClassName": "general-purpose-delete",
          },
        },
      ],
    },
  },
]
`;
